Adattato codice per java 9 e 10
git-svn-id: svn://openspcoop.org/gov4j/openspcoop2/branches/3.0/3.0.dev@13926 f7a281a6-e321-0410-a5c7-cb86b8957a31