@@ -73,14 +73,14 @@ public class InvocazionePorta extends org.openspcoop2.utils.beans.BaseBean imple
     if(this.id!=null)
 		return this.id;
 	else
-		return new Long(-1);
+		return Long.valueOf(-1);
   }
 
   public void setId(Long id) {
     if(id!=null)
 		this.id=id;
 	else
-		this.id=new Long(-1);
+		this.id=Long.valueOf(-1);
   }
 
   public void addCredenziali(Credenziali credenziali) {
