@@ -65,14 +65,14 @@ public class PortaApplicativaAutorizzazioneSoggetti extends org.openspcoop2.util
     if(this.id!=null)
 		return this.id;
 	else
-		return new Long(-1);
+		return Long.valueOf(-1);
   }
 
   public void setId(Long id) {
     if(id!=null)
 		this.id=id;
 	else
-		this.id=new Long(-1);
+		this.id=Long.valueOf(-1);
   }
 
   public void addSoggetto(PortaApplicativaAutorizzazioneSoggetto soggetto) {
