@@ -78,14 +78,14 @@ public class Azione extends org.openspcoop2.utils.beans.BaseBean implements Seri
     if(this.id!=null)
 		return this.id;
 	else
-		return new Long(-1);
+		return Long.valueOf(-1);
   }
 
   public void setId(Long id) {
     if(id!=null)
 		this.id=id;
 	else
-		this.id=new Long(-1);
+		this.id=Long.valueOf(-1);
   }
 
   public void addProtocolProperty(ProtocolProperty protocolProperty) {
