@@ -85,14 +85,14 @@ public class TransportRequestContext extends org.openspcoop2.utils.beans.BaseBea
     if(this.id!=null)
 		return this.id;
 	else
-		return new Long(-1);
+		return Long.valueOf(-1);
   }
 
   public void setId(Long id) {
     if(id!=null)
 		this.id=id;
 	else
-		this.id=new Long(-1);
+		this.id=Long.valueOf(-1);
   }
 
   public UrlParameters getUrlParameters() {
