@@ -48,14 +48,14 @@ public class PoolSize extends org.openspcoop2.utils.beans.BaseBean implements Se
     if(this.id!=null)
 		return this.id;
 	else
-		return new Long(-1);
+		return Long.valueOf(-1);
   }
 
   public void setId(Long id) {
     if(id!=null)
 		this.id=id;
 	else
-		this.id=new Long(-1);
+		this.id=Long.valueOf(-1);
   }
 
   public BigInteger getInitial() {
