@@ -48,21 +48,21 @@ public class Binary extends org.openspcoop2.utils.beans.BaseBean implements Seri
     if(this.id!=null)
 		return this.id;
 	else
-		return new Long(-1);
+		return Long.valueOf(-1);
   }
 
   public void setId(Long id) {
     if(id!=null)
 		this.id=id;
 	else
-		this.id=new Long(-1);
+		this.id=Long.valueOf(-1);
   }
 
   public Long getIdOperation() {
     if(this.idOperation!=null){
 		return this.idOperation;
 	}else{
-		return new Long(-1);
+		return Long.valueOf(-1);
 	}
 
   }
@@ -71,7 +71,7 @@ public class Binary extends org.openspcoop2.utils.beans.BaseBean implements Seri
     if(idOperation!=null)
 this.idOperation=idOperation;
 else
-this.idOperation=new Long(-1);
+this.idOperation=Long.valueOf(-1);
   }
 
   public String getBinaryId() {
